[package]
name = "feather-server"
version = "0.6.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"
default-run = "feather-server"

[lib]
name = "feather_server"
path = "src/lib.rs"

[[bin]]
name = "feather-server"
path = "src/main.rs"

[dependencies]
# Feather crates
feather-core = { path = "../core" }
feather-server-block = { path = "block" }
feather-server-chat = { path = "chat" }
feather-server-chunk = { path = "chunk" }
feather-server-config = { path = "config" }
feather-server-entity = { path = "entity" }
feather-server-lighting = { path = "lighting" }
feather-server-network = { path = "network" }
feather-server-packet-buffer = { path = "packet_buffer" }
feather-server-physics = { path = "physics" }
feather-server-player = { path = "player" }
feather-server-types = { path = "types" }
feather-server-util = { path = "util" }
feather-server-weather = { path = "weather" }
feather-server-worldgen = { path = "worldgen" }

#The storage-event-control feature is not in a stable version yet,
#thus we need to use the git version.
#Should be changed once the feature is in a stable version
specs = { git = "https://github.com/slide-rs/specs", features = ["storage-event-control"] }

rayon = "1.1.2"
shrev = "1.1.1"
failure = "0.1.5"
backtrace = "0.3.35"
num-derive = "0.2.5"
num-traits = "0.2.8"
smallvec = "0.6.10"
lazy_static = "1.4.0"
nalgebra-glm = "0.4.2"
nalgebra = "0.18.1"
ncollide3d = "0.20.1"
derive_deref = "1.1.0"
feather-codegen = { path = "../codegen" }
bitflags = "1.1.0"
fnv = "1.0.6"
base64 = "0.10.1"
bumpalo = "2.6.0"
thread_local = "0.3.6"
parking_lot = "0.9.0"
heapless = "0.5.1"

[features]
nightly = ["specs/nightly", "parking_lot/nightly"]
